feat(#33): success cases for add group member with mails
